PROJECT(threadpool)

ADD_DEFINITIONS(-std=c++11)

aux_source_directory(. SRC_LIST)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

#ADD_EXECUTABLE(threadpool ${SRC_LIST})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC_LIST})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

ADD_LIBRARY(${PROJECT_NAME}_static STATIC ${SRC_LIST})
set_target_properties(${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

TARGET_LINK_LIBRARIES(threadpool pthread)

install(TARGETS ${PROJECT_NAME}
        LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/../third_party)